--- a/Checkers/Checkers.vcxproj
+++ b/Checkers/Checkers.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="include\Ball.h" />
     <ClInclude Include="include\Board.h" />
     <ClInclude Include="include\BoardControl.h" />
+    <ClInclude Include="include\CameraControl.h" />
     <ClInclude Include="include\Dimple.h" />
     <ClInclude Include="include\Util.h" />
   </ItemGroup>
@@ -79,6 +80,7 @@
     <ClCompile Include="src\Ball.cpp" />
     <ClCompile Include="src\Board.cpp" />
     <ClCompile Include="src\BoardControl.cpp" />
+    <ClCompile Include="src\CameraControl.cpp" />
     <ClCompile Include="src\CheckersGame.cpp" />
     <ClCompile Include="src\Dimple.cpp" />
   </ItemGroup>
