--- a/Checkers/Checkers.vcxproj.filters
+++ b/Checkers/Checkers.vcxproj.filters
@@ -61,5 +61,11 @@
     <FxCompile Include="..\Debug\Shaders\VertexShader.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
+    <FxCompile Include="..\Debug\Shaders\GlowPixelShader.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="..\Debug\Shaders\GlowVertexShader.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
