Clicking kind of works; it has to avoid deleting objects and triggering OnMouseExit at the same time which is an engine problem

--- a/Checkers/Checkers.vcxproj.filters
+++ b/Checkers/Checkers.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="include\CameraControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Clickable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ball.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\CameraControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Clickable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
