--- a/Checkers/Checkers.vcxproj
+++ b/Checkers/Checkers.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="include\Board.h" />
     <ClInclude Include="include\BoardControl.h" />
     <ClInclude Include="include\CameraControl.h" />
+    <ClInclude Include="include\Clickable.h" />
     <ClInclude Include="include\Dimple.h" />
     <ClInclude Include="include\Util.h" />
   </ItemGroup>
@@ -83,6 +84,7 @@
     <ClCompile Include="src\CameraControl.cpp" />
     <ClCompile Include="src\CheckersGame.cpp" />
     <ClCompile Include="src\Dimple.cpp" />
+    <ClCompile Include="src\Clickable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Debug\Shaders\GlowPixelShader.hlsl">
