It's kinda hack but there's some visual cue when things are highlihgted

--- a/Checkers/Checkers.vcxproj.filters
+++ b/Checkers/Checkers.vcxproj.filters
@@ -73,5 +73,8 @@
     <FxCompile Include="..\Debug\Shaders\GlowVertexShader.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
+    <FxCompile Include="..\Debug\Shaders\PixelHighlight.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
